--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,12 @@
-web: uvicorn main:app --host=0.0.0.0 --port=10000
+services:
+  - type: web
+    name: propostas-api
+    env: python
+    plan: free
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host=0.0.0.0 --port=10000"
+    envVars:
+      - key: SUPABASE_URL
+        value: https://npeqhqhmnnjczkfcxeoj.supabase.co
+      - key: SUPABASE_KEY
+        value: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
